# masahiro

./: .gitignore  DESIGN.md  Makefile  README.md  build_exe.bat  docker-compose.yml  index.html  launcher.py  monitor.py  monitor_gui.py  pdf_app.spec  pyproject.toml  requirements-dev.txt  requirements.txt  video_editor.spec  起動.bat  起動_gui.bat
.github/workflows/: build-exe.yml
backend/: app_launcher.py  config.py  main.py  requirements.txt
backend/routers/: content.py  files.py  merge.py  rename.py  split.py
backend/services/: pdf_extractor.py
docs/: 01_data_models.md  02_module_api.md  03_cli_and_config.md  04_test_plan.md  05_sequence_diagram.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: BatchRenamePanel.tsx  ContentViewer.tsx  FileList.tsx  FileUpload.tsx  MergePanel.tsx  RenamePanel.tsx  SplitPanel.tsx
frontend/src/utils/: rename.ts
scripts/: import_csv.py
sql/: 01_schema.sql  02_seed.sql
src/video_editor/: __init__.py  cli.py  concat.py  config.py  cycle_detector.py  exceptions.py  extractor.py  loader.py  models.py  overlay.py  pipeline.py
tests/: conftest.py
tests/fixtures/: create_test_video.py
tests/unit/: test_cycle_detector.py  test_loader.py
web/: app.py
web/templates/: index.html
